# genom-1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  matrix.cpp  matrix.hpp
Output/: Motif_Output
Resources/: BMAL1_sites.bed  DBP_PSSM.mat  SeqFail1.fasta  SeqFail3.fasta
doc/: SV-Genom 1 - Main Functionalities.txt  readme.lyx  readme.tex
doc/html/: _appearance__probability_8cpp.html  _axes_8cpp.html  _axes_8hpp.html  _axes_8hpp_source.html  _input_8hpp.html  _input_8hpp_source.html  _letters_8cpp.html  _letters_8hpp.html  _letters_8hpp_source.html  _logo_8cpp.html  _logo_8hpp.html  _logo_8hpp_source.html  _matrix___conversion__relative__absolute_8cpp.html  _matrix__status_8cpp.html  _protein_8cpp.html  _protein_8hpp.html  _protein_8hpp_source.html  _read_bed_g_8cpp.html  annotated.html  class_axes-members.html  class_axes.html  class_input-members.html  class_input.html  class_letters-members.html  class_letters.html  class_logo-members.html  class_logo.html  class_matrix-members.html  class_matrix.html  class_matrix_protein-members.html  class_matrix_protein.html  class_protein-members.html  class_protein.html  class_sequence-members.html  class_sequence.html  classes.html  creation___p_m_w_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  (+35 more)
res/: A  C  G  T
src/: Appearance_probability  Appearance_probability.cpp  Axes.cpp  Axes.hpp  Doxyfile  Genom.cpp  Genom.hpp  Genom1Main.cpp  Genome.cpp  Genome.hpp  Input.hpp  Letters.cpp  Letters.hpp  Logo.cpp  Logo.hpp  Main.cpp  Matrix_Conversion_relative_absolute.cpp  Matrix_status  Matrix_status.cpp  Protein.cpp  Protein.hpp  ReadBedG.cpp  creation_PMW.cpp  get_afinity_score_from_martix.cpp  loadFile  loadFile.cpp  main.cc  main.cpp  matrix reader.cpp  matrix.cpp  matrix.hpp  matrixConversion.cpp  matrix_absolute_relative_conversion.cpp  matrix_reader.cpp  matrixprotein.cpp  matrixprotein.hpp  seq_generator  seq_generator.cpp  sequence  sequence.cpp  (+3 more)
src/html/: _appearance__probability_8cpp.html  _axes_8cpp.html  _axes_8hpp.html  _axes_8hpp_source.html  _genom1_main_8cpp.html  _genom_8hpp.html  _genom_8hpp_source.html  _genome_8cpp.html  _input_8hpp.html  _input_8hpp_source.html  _letters_8cpp.html  _letters_8hpp.html  _letters_8hpp_source.html  _logo_8cpp.html  _logo_8hpp.html  _logo_8hpp_source.html  _matrix___conversion__relative__absolute_8cpp.html  _matrix__status_8cpp.html  _protein_8cpp.html  _protein_8hpp.html  annotated.html  (+47 more)
test/: Genom1Test.cpp  MatrixProteinTest.cpp  Matrix_Output  Matrix_Output.pages  SeqFail2.fasta  SeqFail3.fasta  SeqPass1.fasta  fasta_test.fasta  matrixprotein_test.hpp  promoters.fasta.txt  sequence_test.hpp
(+84 files in other folders)
